@@ -28,7 +28,6 @@ import java.util.HashSet;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 /**
  * This class encapsulates a classic group member's metadata.
@@ -430,7 +429,7 @@ public class ClassicGroupMember {
             ", protocolType='" + protocolType + '\'' +
             ", supportedProtocols=" + supportedProtocols.stream()
                 .map(JoinGroupRequestProtocol::name)
-                .collect(Collectors.toList()) +
+                .toList() +
             ')';
     }
 }
